# fp16

./: CMakeLists.txt  ChangeLog.txt  LICENSE.txt  README.md  README.txt  half.pc.in  halfConfig.cmake.in  main.cpp
include/: half.hpp
include/half/: half.hpp
tests/: CMakeLists.txt  main.cpp  table.hpp
